@@ -1,6 +1,11 @@
 package br.com.vemser.pessoaapi.service;
 
+import br.com.vemser.pessoaapi.dto.ContatoDTO;
+import br.com.vemser.pessoaapi.dto.EnderecoCreateDTO;
+import br.com.vemser.pessoaapi.dto.EnderecoDTO;
+import br.com.vemser.pessoaapi.entity.Contato;
 import br.com.vemser.pessoaapi.exceptions.RegraDeNegocioException;
+import br.com.vemser.pessoaapi.mapper.EnderecoMapper;
 import br.com.vemser.pessoaapi.repository.EnderecoRepository;
 import br.com.vemser.pessoaapi.entity.Endereco;
 import lombok.extern.slf4j.Slf4j;
@@ -20,30 +25,34 @@ public class EnderecoService {
     @Autowired
     private PessoaService pessoaService;
 
-    public List<Endereco> list() {
-        return enderecoRepository.list();
+    @Autowired
+    private EnderecoMapper enderecoMapper;
+
+    public List<EnderecoDTO> list() {
+        return enderecoRepository.list().stream().map(enderecoMapper::toDTO).toList();
     }
 
-    public List<Endereco> listEnderecoByIdPessoa(Integer id) {
-        return enderecoRepository.list().stream()
-                .filter(pessoa -> pessoa.getIdPessoa().equals(id))
-                .collect(Collectors.toList());
+    public List<EnderecoDTO> listEnderecoByIdPessoa(Integer id) {
+        List<Endereco> enderecoRecuperado = enderecoRepository.list().stream()
+                .filter(pessoa -> pessoa.getIdPessoa().equals(id)).toList();
+        return enderecoRecuperado.stream().map(enderecoMapper::toDTO).toList();
     }
 
-    public List<Endereco> listEnderecoByIdEndereco(Integer id) {
-        return enderecoRepository.list().stream()
-                .filter(endereco -> endereco.getIdEndereco().equals(id))
-                .collect(Collectors.toList());
+    public List<EnderecoDTO> listEnderecoByIdEndereco(Integer id) {
+        List<Endereco> enderecoRecuperado = enderecoRepository.list().stream()
+                .filter(endereco -> endereco.getIdEndereco().equals(id)).toList();
+       return enderecoRecuperado.stream().map(enderecoMapper::toDTO).toList();
     }
 
-    public Endereco create(Endereco endereco, Integer idPessoa) throws RegraDeNegocioException {
+    public EnderecoDTO create(EnderecoCreateDTO endereco, Integer idPessoa) throws RegraDeNegocioException {
         log.info("Endereco criado");
         pessoaService.findById(idPessoa);
-        return enderecoRepository.create(endereco, idPessoa);
+        Endereco enderecoEntity = enderecoMapper.fromCreateDTO(endereco);
+        EnderecoDTO enderecoDTO = enderecoMapper.toDTO(enderecoRepository.create(enderecoEntity, idPessoa));
+        return enderecoDTO;
     }
-
-    public Endereco update(Integer id,
-                           Endereco enderecoAtualizar) throws RegraDeNegocioException {
+    public EnderecoDTO update(Integer id,
+                           EnderecoDTO enderecoAtualizar) throws RegraDeNegocioException {
         log.info("Endereco alterado");
         Endereco enderecoRecuperado = findById(id);
         enderecoRecuperado.setIdPessoa(enderecoAtualizar.getIdEndereco() != null ? enderecoAtualizar.getIdPessoa() : enderecoRecuperado.getIdPessoa());
@@ -55,7 +64,7 @@ public class EnderecoService {
         enderecoRecuperado.setCidade(enderecoAtualizar.getCidade() != null ? enderecoAtualizar.getCidade() : enderecoRecuperado.getCidade());
         enderecoRecuperado.setEstado(enderecoAtualizar.getEstado() != null ? enderecoAtualizar.getEstado() : enderecoRecuperado.getEstado());
         enderecoRecuperado.setPais(enderecoAtualizar.getPais() != null ? enderecoAtualizar.getPais() : enderecoRecuperado.getPais());
-        return enderecoRecuperado;
+        return enderecoMapper.toDTO(enderecoRecuperado);
     }
 
     public void delete(Integer id) throws RegraDeNegocioException {
